@@ -13,6 +13,8 @@
     * file permissions can be set via :permissions option
     * fixed bug that prevents deleting of file via assigning nil if
       column is declared as NON NULL on some databases
+    * don't expand absolute paths. This is necessary for file_column to work
+      when your rails app is deployed into a sub-directory via a symbolic link
 
 0.3.1
     * make object with file_columns serializable
